sro-packages/hybrid-usage-add-on/main/default/objects/UsageRun__c/UsageRun__c.object-meta.xml
<CustomObject>
    <description>Groups togethers all the Usage Summaries that were updated in an execution of a Usage Scheduler.</description>
    <label>Usage Run</label>
    <nameField>
        <label>Usage Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>