sro-packages/hybrid-usage-add-on/main/default/objects/UsageRun__c/fields/CompletedTime__c.field-meta.xml
<CustomField>
    <fullName>CompletedTime__c</fullName>
    <label>Completed Time</label>
    <type>DateTime</type>
</CustomField>