sro-packages/hybrid-usage-add-on/main/default/objects/UsageRun__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UsageRunStatus</valueSetName>
    </valueSet>
</CustomField>