sro-packages/hybrid-usage-add-on/main/default/objects/UsageRun__c/fields/StatusIndicator__c.field-meta.xml
<CustomField>
    <fullName>StatusIndicator__c</fullName>
    <formula>IF (
ISPICKVAL(Status__c, &apos;Completed with Errors&apos;),
IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_StatusRed.png&apos;, &apos;In Progress&apos;, 20, 20),
IF (
ISPICKVAL(Status__c, &apos;Completed&apos;),
IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_StatusGreen.png&apos;, &apos;In Progress&apos;, 20, 20),
IMAGE(&apos;/resource/blng__blng_slds/assets/images/InvoiceRun_StatusOrange.png&apos;, &apos;In Progress&apos;, 20, 20)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Indicator</label>
    <type>Text</type>
</CustomField>