sro-packages/hybrid-usage-add-on/main/default/objects/UsageRun__c/fields/UsageScheduler__c.field-meta.xml
<CustomField>
    <fullName>UsageScheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Scheduler</label>
    <referenceTo>UsageScheduler__c</referenceTo>
    <relationshipLabel>Usage Runs</relationshipLabel>
    <relationshipName>UsageSchedulerUsageRuns</relationshipName>
    <type>Lookup</type>
</CustomField>